add random user information on main activity and display it